# math-lib

./: .gitignore  License  README.md  setup.cfg  setup.py
src/math_lib/: __init__.py  math_lib.py
tests/math_lib/: test_math_lib.py
