[metadata]
name = math_lib
version = 0.1.0
description = A simple Python library for basic mathematical operations
long_description = file: README.md
long_description_content_type = text/markdown
author = Kelechi Uradu
author_email = kelechiuradu@yahoo.com
url = https://github.com/kelechiP/math-lib
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires = pytest==7.0.0

[options.packages.find]
where = src
